# shu-net-keeper

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  config.toml  config.toml.example  docker-compose.yml
.github/workflows/: rust.yml  tauri.yml
src/: config.rs  constants.rs  daemon.rs  email.rs  error.rs  http_client.rs  lib.rs  logger.rs  login.rs  main.rs  network.rs  report.rs  rsa.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs  types.rs  validation.rs
src/core/: email.rs  login.rs  mod.rs  network.rs  report.rs
ui/: app.js  index.html  styles.css
