[package]
name = "ShuAutoLogin"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["blocking","json"] }
log = "0.4"
simplelog = "0.12"
chrono = "0.4" 
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
lettre = "0.11"
validator = "0.14"
urlencoding = "2.1"

[dev-dependencies]
mockito = "1"  