[package]
name = "shu-net-keeper"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
chrono = "0.4"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
lettre = "0.11"
validator = "0.14"
urlencoding = "2.1"
regex="1.12"
thiserror = "2.0"
gethostname = "0.5"
rsa = "0.9"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies]
mockito = "1"  